updated synapse notebooks

--- a/fsidemo/artifacts/notebooks/AIML_2_Registering Banking Churn Prediction Dataset in Azure ML.ipynb
+++ b/fsidemo/artifacts/notebooks/AIML_2_Registering Banking Churn Prediction Dataset in Azure ML.ipynb
@@ -1,6 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 2,
   "cells": [
     {
       "cell_type": "markdown",
@@ -21,7 +19,7 @@
       "metadata": {},
       "source": [
         "## *****For Demonstration purpose only, Please customize as per your enterprise security needs and compliances***** \n",
-		"Disclaimer: By accessing this code, you acknowledge the code is made available for presentation and demonstration purposes only and that the code: (1) is not subject to SOC 1 and SOC 2 compliance audits; (2) is not designed or intended to be a substitute for the professional advice, diagnosis, treatment, or judgment of a certified financial services professional; (3) is not designed, intended or made available as a medical device; and (4) is not designed or intended to be a substitute for professional medical advice, diagnosis, treatment or judgement. Do not use this code to replace, substitute, or provide professional financial advice or judgment, or to replace, substitute or provide medical advice, diagnosis, treatment or judgement. You are solely responsible for ensuring the regulatory, legal, and/or contractual compliance of any use of the code, including obtaining any authorizations or consents, and any solution you choose to build that incorporates this code in whole or in part. \n"
+        "Disclaimer: By accessing this code, you acknowledge the code is made available for presentation and demonstration purposes only and that the code: (1) is not subject to SOC 1 and SOC 2 compliance audits; (2) is not designed or intended to be a substitute for the professional advice, diagnosis, treatment, or judgment of a certified financial services professional; (3) is not designed, intended or made available as a medical device; and (4) is not designed or intended to be a substitute for professional medical advice, diagnosis, treatment or judgement. Do not use this code to replace, substitute, or provide professional financial advice or judgment, or to replace, substitute or provide medical advice, diagnosis, treatment or judgement. You are solely responsible for ensuring the regulatory, legal, and/or contractual compliance of any use of the code, including obtaining any authorizations or consents, and any solution you choose to build that incorporates this code in whole or in part. \n"
       ]
     },
     {
@@ -36,32 +34,36 @@
     {
       "cell_type": "code",
       "execution_count": 1,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.livy.statement-meta+json": {
-              "spark_pool": "FinanceSpk",
-              "session_id": 57,
-              "statement_id": 1,
-              "state": "finished",
+              "execution_finish_time": "2021-07-14T20:40:51.0965882Z",
+              "execution_start_time": "2021-07-14T20:40:36.6423482Z",
               "livy_statement_state": "available",
               "queued_time": "2021-07-14T20:38:34.0709207Z",
+              "session_id": 57,
               "session_start_time": "2021-07-14T20:38:34.0982494Z",
-              "execution_start_time": "2021-07-14T20:40:36.6423482Z",
-              "execution_finish_time": "2021-07-14T20:40:51.0965882Z"
+              "spark_pool": "FinanceSpk",
+              "state": "finished",
+              "statement_id": 1
             },
-            "text/plain": "StatementMeta(FinanceSpk, 57, 1, Finished, Available)"
+            "text/plain": [
+              "StatementMeta(FinanceSpk, 57, 1, Finished, Available)"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
-          "text": "Workspace configuration succeeded. Skip the workspace creation steps below"
+          "output_type": "stream",
+          "text": [
+            "Workspace configuration succeeded. Skip the workspace creation steps below"
+          ]
         }
       ],
-      "metadata": {},
       "source": [
         "# Install the required package\n",
         "# import pip \n",
@@ -93,100 +95,113 @@
     {
       "cell_type": "code",
       "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.livy.statement-meta+json": {
-              "spark_pool": "FinanceSpk",
-              "session_id": 57,
-              "statement_id": 2,
-              "state": "finished",
-              "livy_statement_state": "available",
-              "queued_time": "2021-07-14T20:38:34.0722687Z",
-              "session_start_time": null,
-              "execution_start_time": "2021-07-14T20:40:51.1893145Z",
-              "execution_finish_time": "2021-07-14T20:40:55.3198797Z"
-            },
-            "text/plain": "StatementMeta(FinanceSpk, 57, 2, Finished, Available)"
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": ""
-        }
-      ],
       "metadata": {
+        "collapsed": true,
         "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
+          "outputs_hidden": false,
+          "source_hidden": false
         },
         "nteract": {
           "transient": {
             "deleting": false
           }
-        },
-        "collapsed": true
+        }
       },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.livy.statement-meta+json": {
+              "execution_finish_time": "2021-07-14T20:40:55.3198797Z",
+              "execution_start_time": "2021-07-14T20:40:51.1893145Z",
+              "livy_statement_state": "available",
+              "queued_time": "2021-07-14T20:38:34.0722687Z",
+              "session_id": 57,
+              "session_start_time": null,
+              "spark_pool": "FinanceSpk",
+              "state": "finished",
+              "statement_id": 2
+            },
+            "text/plain": [
+              "StatementMeta(FinanceSpk, 57, 2, Finished, Available)"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": []
+        }
+      ],
       "source": [
-        "from azure.storage.blob import ContainerClient, BlobClient\r\n",
-        "import pandas as pd\r\n",
-        "from io import BytesIO\r\n",
-        "\r\n",
-        "CONNECTIONSTRING = 'DefaultEndpointsProtocol=https;AccountName=stfsiprod;AccountKey=WVrgvqHHELb6+XKiurG3qiPyNf48vF2L5LGpQPtR5n2J6VHPdSex6VN1H7a+73PNFRomme11g/1mVdl32kBiLA==;EndpointSuffix=core.windows.net'\r\n",
-        "CONTAINER_NAME = 'retail-banking-customer-churn'\r\n",
-        "\r\n",
-        "BLOBNAME = 'retail_banking_customer_churn_for_model.csv'\r\n",
-        "blob = BlobClient.from_connection_string(conn_str=CONNECTIONSTRING, container_name=CONTAINER_NAME, blob_name=BLOBNAME)\r\n",
-        "blob_data = blob.download_blob()\r\n",
-        "BytesIO(blob_data.content_as_bytes())\r\n",
-        "# uploading the csv to the ADLSGen2 storage container\r\n",
-        "data = pd.read_csv(BytesIO(blob_data.content_as_bytes()))\r\n",
+        "from azure.storage.blob import ContainerClient, BlobClient\n",
+        "import pandas as pd\n",
+        "from io import BytesIO\n",
+        "\n",
+        "CONNECTIONSTRING = 'DefaultEndpointsProtocol=https;AccountName=#STORAGE_ACCOUNT_NAME#;AccountKey=#STORAGE_ACCOUNT_KEY#;EndpointSuffix=core.windows.net'\n",
+        "CONTAINER_NAME = 'retail-banking-customer-churn'\n",
+        "\n",
+        "BLOBNAME = 'retail_banking_customer_churn_for_model.csv'\n",
+        "blob = BlobClient.from_connection_string(conn_str=CONNECTIONSTRING, container_name=CONTAINER_NAME, blob_name=BLOBNAME)\n",
+        "blob_data = blob.download_blob()\n",
+        "BytesIO(blob_data.content_as_bytes())\n",
+        "# uploading the csv to the ADLSGen2 storage container\n",
+        "data = pd.read_csv(BytesIO(blob_data.content_as_bytes()))\n",
         "data.to_csv(BLOBNAME,header=True)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.livy.statement-meta+json": {
-              "spark_pool": "FinanceSpk",
-              "session_id": 57,
-              "statement_id": 3,
-              "state": "finished",
-              "livy_statement_state": "available",
-              "queued_time": "2021-07-14T20:41:24.1516802Z",
-              "session_start_time": null,
-              "execution_start_time": "2021-07-14T20:41:24.2493775Z",
-              "execution_finish_time": "2021-07-14T20:41:26.2959109Z"
-            },
-            "text/plain": "StatementMeta(FinanceSpk, 57, 3, Finished, Available)"
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "   age  marital  housing  ...  job_student  job_technician  job_unemployed\n0   56        1        1  ...            0               0               0\n1   57        1        1  ...            0               0               0\n2   37        1        2  ...            0               0               0\n3   40        1        1  ...            0               0               0\n4   56        1        1  ...            0               0               0\n\n[5 rows x 32 columns]"
-        }
-      ],
       "metadata": {
+        "collapsed": true,
         "jupyter": {
-          "source_hidden": false,
-          "outputs_hidden": false
+          "outputs_hidden": false,
+          "source_hidden": false
         },
         "nteract": {
           "transient": {
             "deleting": false
           }
-        },
-        "collapsed": true
+        }
       },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.livy.statement-meta+json": {
+              "execution_finish_time": "2021-07-14T20:41:26.2959109Z",
+              "execution_start_time": "2021-07-14T20:41:24.2493775Z",
+              "livy_statement_state": "available",
+              "queued_time": "2021-07-14T20:41:24.1516802Z",
+              "session_id": 57,
+              "session_start_time": null,
+              "spark_pool": "FinanceSpk",
+              "state": "finished",
+              "statement_id": 3
+            },
+            "text/plain": [
+              "StatementMeta(FinanceSpk, 57, 3, Finished, Available)"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   age  marital  housing  ...  job_student  job_technician  job_unemployed\n",
+            "0   56        1        1  ...            0               0               0\n",
+            "1   57        1        1  ...            0               0               0\n",
+            "2   37        1        2  ...            0               0               0\n",
+            "3   40        1        1  ...            0               0               0\n",
+            "4   56        1        1  ...            0               0               0\n",
+            "\n",
+            "[5 rows x 32 columns]"
+          ]
+        }
+      ],
       "source": [
         "data.head()"
       ]
@@ -201,32 +216,39 @@
     {
       "cell_type": "code",
       "execution_count": 5,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.livy.statement-meta+json": {
-              "spark_pool": "FinanceSpk",
-              "session_id": 57,
-              "statement_id": 5,
-              "state": "finished",
+              "execution_finish_time": "2021-07-14T20:42:20.8209646Z",
+              "execution_start_time": "2021-07-14T20:42:10.5211365Z",
               "livy_statement_state": "available",
               "queued_time": "2021-07-14T20:42:10.4306911Z",
+              "session_id": 57,
               "session_start_time": null,
-              "execution_start_time": "2021-07-14T20:42:10.5211365Z",
-              "execution_finish_time": "2021-07-14T20:42:20.8209646Z"
+              "spark_pool": "FinanceSpk",
+              "state": "finished",
+              "statement_id": 5
             },
-            "text/plain": "StatementMeta(FinanceSpk, 57, 5, Finished, Available)"
+            "text/plain": [
+              "StatementMeta(FinanceSpk, 57, 5, Finished, Available)"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
-          "text": "Uploading an estimated of 1 files\nUploading ./data/retail_banking_customer_churn_for_model.csv\nUploaded ./data/retail_banking_customer_churn_for_model.csv, 1 files out of an estimated total of 1\nUploaded 1 files"
+          "output_type": "stream",
+          "text": [
+            "Uploading an estimated of 1 files\n",
+            "Uploading ./data/retail_banking_customer_churn_for_model.csv\n",
+            "Uploaded ./data/retail_banking_customer_churn_for_model.csv, 1 files out of an estimated total of 1\n",
+            "Uploaded 1 files"
+          ]
         }
       ],
-      "metadata": {},
       "source": [
         "from shutil import copyfile\n",
         "from sklearn import datasets\n",
@@ -256,32 +278,34 @@
     {
       "cell_type": "code",
       "execution_count": 7,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.livy.statement-meta+json": {
-              "spark_pool": "FinanceSpk",
-              "session_id": 57,
-              "statement_id": 7,
-              "state": "finished",
+              "execution_finish_time": "2021-07-14T20:43:02.6076616Z",
+              "execution_start_time": "2021-07-14T20:43:00.5500585Z",
               "livy_statement_state": "available",
               "queued_time": "2021-07-14T20:43:00.4533179Z",
+              "session_id": 57,
               "session_start_time": null,
-              "execution_start_time": "2021-07-14T20:43:00.5500585Z",
-              "execution_finish_time": "2021-07-14T20:43:02.6076616Z"
+              "spark_pool": "FinanceSpk",
+              "state": "finished",
+              "statement_id": 7
             },
-            "text/plain": "StatementMeta(FinanceSpk, 57, 7, Finished, Available)"
+            "text/plain": [
+              "StatementMeta(FinanceSpk, 57, 7, Finished, Available)"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
-          "text": ""
+          "output_type": "stream",
+          "text": []
         }
       ],
-      "metadata": {},
       "source": [
         "# train_data_registered = Dataset.get_by_name(amlworkspace,\"train_data\",version='latest')\n",
         "#train_data_registered.unregister_all_versions()\n",
@@ -296,25 +320,25 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "outputs": [],
       "metadata": {},
-      "source": [
-        ""
-      ]
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
-    "save_output": true,
     "kernelspec": {
-      "name": "synapse_pyspark",
-      "display_name": "Synapse PySpark"
+      "display_name": "Synapse PySpark",
+      "name": "synapse_pyspark"
     },
     "language_info": {
       "name": "python"
     },
+    "save_output": true,
     "synapse_widget": {
-      "version": "0.1",
-      "state": {}
+      "state": {},
+      "version": "0.1"
     }
-  }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 2
 }
