updated databricks notebooks and main script

--- a/healthcare2/artifacts/databricks/Initial setup.ipynb
+++ b/healthcare2/artifacts/databricks/Initial setup.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -35,9 +36,9 @@
    },
    "outputs": [],
    "source": [
-    "ad = dbutils.secrets.get('Healthcare2.0-SecretScope', 'healthcare-ad')\n",
-    "sp = dbutils.secrets.get('Healthcare2.0-SecretScope', 'Healthcare-sp')\n",
-    "se = dbutils.secrets.get('Healthcare2.0-SecretScope', 'healthcare-secret')"
+    "ad = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#TENANT_ID#')\n",
+    "sp = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SP_ID#')\n",
+    "se = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SECRET_KEY#')"
    ]
   },
   {
@@ -169,6 +170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
