--- a/healthcare2/artifacts/databricks/PatientExperience_dlt.ipynb
+++ b/healthcare2/artifacts/databricks/PatientExperience_dlt.ipynb
@@ -14,9 +14,9 @@
    },
    "outputs": [],
    "source": [
-    "ad = dbutils.secrets.get('Healthcare2.0-SecretScope', 'healthcare-ad')\n",
-    "sp = dbutils.secrets.get('Healthcare2.0-SecretScope', 'Healthcare-sp')\n",
-    "se = dbutils.secrets.get('Healthcare2.0-SecretScope', 'healthcare-secret')\n",
+    "ad = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#TENANT_ID#')\n",
+    "sp = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SP_ID#')\n",
+    "se = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SECRET_KEY#')\n",
     "\n",
     "\n",
     "spark.conf.set(\"fs.azure.account.auth.type.#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net\", \"OAuth\")\n",
@@ -180,9 +180,9 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
+    "# %sql\n",
     "\n",
-    "select * from csv.`abfss://data-source@#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net/Bed Occupancy and Availability Report/OccupancyHealthcareData.csv`"
+    "# select * from csv.`abfss://data-source@#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net/Bed Occupancy and Availability Report/OccupancyHealthcareData.csv`"
    ]
   },
   {
