--- a/healthcare2/artifacts/databricks/BedOccupancySupplierAQI_dlt.ipynb
+++ b/healthcare2/artifacts/databricks/BedOccupancySupplierAQI_dlt.ipynb
@@ -14,9 +14,9 @@
    },
    "outputs": [],
    "source": [
-    "ad = dbutils.secrets.get('Healthcare2.0-SecretScope', 'healthcare-ad')\n",
-    "sp = dbutils.secrets.get('Healthcare2.0-SecretScope', 'Healthcare-sp')\n",
-    "se = dbutils.secrets.get('Healthcare2.0-SecretScope', 'healthcare-secret')\n",
+    "ad = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#TENANT_ID#')\n",
+    "sp = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SP_ID#')\n",
+    "se = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SECRET_KEY#')\n",
     "\n",
     "\n",
     "spark.conf.set(\"fs.azure.account.auth.type.#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net\", \"OAuth\")\n",
@@ -165,6 +165,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
