--- a/healthcare2/artifacts/databricks/Initial setup.ipynb
+++ b/healthcare2/artifacts/databricks/Initial setup.ipynb
@@ -36,9 +36,9 @@
    },
    "outputs": [],
    "source": [
-    "ad = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#TENANT_ID#')\n",
-    "sp = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SP_ID#')\n",
-    "se = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SECRET_KEY#')"
+    "ad = '#TENANT_ID#'\n",
+    "sp = '#APP_ID#'\n",
+    "se = '#SECRET_KEY#'"
    ]
   },
   {
