--- a/healthcare2/artifacts/databricks/Patient Profile dlt.ipynb
+++ b/healthcare2/artifacts/databricks/Patient Profile dlt.ipynb
@@ -14,9 +14,9 @@
    },
    "outputs": [],
    "source": [
-    "ad = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#TENANT_ID#')\n",
-    "sp = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SP_ID#')\n",
-    "se = dbutils.secrets.get('#SERVICE_PRINCIPAL_NAME#', '#SECRET_KEY#')\n",
+    "ad = '#TENANT_ID#'\n",
+    "sp = '#APP_ID#'\n",
+    "se = '#SECRET_KEY#'\n",
     "\n",
     " \n",
     "spark.conf.set(\"fs.azure.account.auth.type.#STORAGE_ACCOUNT_NAME#.dfs.core.windows.net\", \"OAuth\")\n",
