updated scripts for databricks notebook

--- a/fabric/azuredatabricks/databricks/01_Setup-Onelake_Integration_with_Databrick.ipynb
+++ b/fabric/azuredatabricks/databricks/01_Setup-Onelake_Integration_with_Databrick.ipynb
@@ -39,9 +39,9 @@
    },
    "outputs": [],
    "source": [
-    "datasource_bronze_point =\"abfss://#WORKSPACE_NAME#@onelake.dfs.fabric.microsoft.com/lakehouseBronze.Lakehouse/Files\"\n",
-    "dest_mount_silver_point = \"abfss://#WORKSPACE_NAME#@onelake.dfs.fabric.microsoft.com/lakehouseSilver.Lakehouse\"\n",
-    "dest_mount_gold_point = \"abfss://#WORKSPACE_NAME#@onelake.dfs.fabric.microsoft.com/lakehouseGold.Lakehouse\""
+    "datasource_bronze_point =\"abfss://#WORKSPACE_NAME#@onelake.dfs.fabric.microsoft.com/#LAKEHOUSE_BRONZE#.Lakehouse/Files\"\n",
+    "dest_mount_silver_point = \"abfss://#WORKSPACE_NAME#@onelake.dfs.fabric.microsoft.com/#LAKEHOUSE_SILVER#.Lakehouse\"\n",
+    "dest_mount_gold_point = \"abfss://#WORKSPACE_NAME#@onelake.dfs.fabric.microsoft.com/#LAKEHOUSE_GOLD#.Lakehouse\""
    ]
   },
   {
