Update 12a Safety Incident Reports Form Recognizer.ipynb

--- a/retail/artifacts/amlnotebooks/12a Safety Incident Reports Form Recognizer.ipynb
+++ b/retail/artifacts/amlnotebooks/12a Safety Incident Reports Form Recognizer.ipynb
@@ -304,8 +304,8 @@
         "%%time\n",
         "# Connect to the container for uploading the JSON files\n",
         "# Set up configs for blob storage\n",
-        "STORAGE_ACCOUNT_NAME = \"stcognitivesearch0001\"\n",
-        "STORAGE_ACCOUNT_ACCESS_KEY = \"GTFY+zmRUBnx630A0xeMh77Cc5a2Lde/j//zRyPcFnX4Rl9D1nF5NVLHcvKRutnRu9EoUXAnl79IiBcNXt7ing==\"\n",
+        "STORAGE_ACCOUNT_NAME = \"\"\n",
+        "STORAGE_ACCOUNT_ACCESS_KEY = \"\"\n",
         "# Upload the JSON files in this container\n",
         "STORAGE_CONTAINER_NAME = \"formrecogoutput\"\n",
         "# Instantiating a blob service object\n",
